--- a/project/doc_vec_embed.ipynb
+++ b/project/doc_vec_embed.ipynb
@@ -73,7 +73,7 @@
    "source": [
     "## Necessary for Colab, not necessary for course environment\n",
     "# %pip install -qq langchain langchain-nvidia-ai-endpoints gradio\n",
-    "# %pip install -qq arxiv pymupdf\n",
+    "\n",
     "\n",
     "# import os\n",
     "# os.environ[\"NVIDIA_API_KEY\"] = \"nvapi-...\"\n",
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "fd103c85-a12e-4a94-914f-aab8b4ec7400",
    "metadata": {},
    "outputs": [],
@@ -315,10 +315,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "d0c2747d-50c3-49aa-b0c3-92ecb2e04656",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'chunked_docs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 8\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_core\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mprompts\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ChatPromptTemplate, PromptTemplate\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_community\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvectorstores\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FAISS\n\u001b[1;32m----> 8\u001b[0m vector \u001b[38;5;241m=\u001b[39m FAISS\u001b[38;5;241m.\u001b[39mfrom_documents(chunked_docs, embeddings)\n\u001b[0;32m      9\u001b[0m retriever \u001b[38;5;241m=\u001b[39m vector\u001b[38;5;241m.\u001b[39mas_retriever\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'chunked_docs' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.document_loaders import TextLoader\n",
     "from langchain_chroma import Chroma\n",
@@ -333,15 +345,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "1a45e6a1-8994-4345-aadf-fab3017741e2",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Document(page_content=\"wikigdrive: 'dd69069d725fca5f553df7ded62e130a49d49ca6'\\n---\\nDocument Management is an essential component of the {{% system-name %}} EHR portfolio. With our document management solutions, clients will experience the conveniences of easy chart access, anywhere, anytime, as well as hassle-free interoperability and integrated workflows, intended to streamline operations and communication.\", metadata={'source': 'functions\\\\document-management.md'}), Document(page_content='---\\nManaging patient flow is vital to the effectiveness of any practice. Because of this, the {{% system-name %}} system provides fast and easily-navigated functionality for searching current charts and documents, as well as for registering new patients.', metadata={'source': 'functions\\\\patient-registration.md'}), Document(page_content='. Overall, {{% system-name %}} not only incorporates streamlined processes for recording and treating injuries and illnesses, it also provides tools for easy tracking and follow-up through the use of its integrated worklists and tasking module.', metadata={'source': 'functions\\\\injury-care.md'}), Document(page_content='---\\n{{% system-name %}} provides all the tools necessary for customizing, delivering, resulting, and tracking orders electronically. The {{% system-name %}} system not only allows for order faxing and printing, but can also be configured to submit lab orders, track order statuses, and receive results, all electronically.  \\n{{% children %}}', metadata={'source': 'functions\\\\order-and-result-management.md'})]\n"
+     "ename": "NameError",
+     "evalue": "name 'vector' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m query \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWhat functionalities does the document management system provide\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# docs = db.similarity_search(query)\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m retriever \u001b[38;5;241m=\u001b[39m vector\u001b[38;5;241m.\u001b[39mas_retriever()\n\u001b[0;32m      4\u001b[0m docs \u001b[38;5;241m=\u001b[39m retriever\u001b[38;5;241m.\u001b[39minvoke(query)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m (docs)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'vector' is not defined"
      ]
     }
    ],
@@ -684,32 +700,6 @@
     "    for s in final_chain.stream(question):\n",
     "        print(s, end=\"\")\n",
     "    print(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "f1759879-ea87-4e29-a2e5-ea8353822cef",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mfaiss\u001b[39;00m                   \u001b[38;5;66;03m# make faiss available\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m index \u001b[38;5;241m=\u001b[39m faiss\u001b[38;5;241m.\u001b[39mIndexFlatL2(d)   \u001b[38;5;66;03m# build the index\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(index\u001b[38;5;241m.\u001b[39mis_trained)\n\u001b[0;32m      4\u001b[0m index\u001b[38;5;241m.\u001b[39madd(xb)                  \u001b[38;5;66;03m# add vectors to the index\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'd' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "import faiss                   # make faiss available\n",
-    "index = faiss.IndexFlatL2(d)   # build the index\n",
-    "print(index.is_trained)\n",
-    "index.add(xb)                  # add vectors to the index\n",
-    "print(index.ntotal)"
    ]
   },
   {
